Betrieb als Nicht-Root-Applikation

--- a/app/assets/javascripts/application.coffee.erb
+++ b/app/assets/javascripts/application.coffee.erb
@@ -145,7 +145,7 @@ $ ->
       addr_search.css left: addr_search.offset().left - width
 
   $(document).on 'click', '.header-tab', () ->
-    $.get("/#{ $(@).prop('id') }?back=true", null, null, 'script')
+    $.get("#{ $(@).data('url') }?back=true", null, null, 'script')
     false
 
   $(document).on 'click', '#btn-start, .btn-start', () ->
