--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,7 +72,11 @@
               <%= link_to t(:list), [:requests, :static] %> |
               <%= link_to t(:statistic), [:statistics], data: { turbolinks: false } %> |
               <%= link_to t(:help), [:help, :static] %> |
-              <%= link_to t(:privacy), [:privacy, :static] %> |
+              <% if Settings::Url.respond_to?(:external_privacy_url) -%>
+                <%= link_to t(:privacy), Settings::Url.external_privacy_url, target: '_blank' %> |
+              <% else -%>
+                <%= link_to t(:privacy), [:privacy, :static] %> |
+              <% end -%>
               <%= link_to t(:imprint), [:imprint, :static] %> |
               <%= link_to t(:usage), [:usage, :static] %>
             </div>
@@ -122,7 +126,11 @@
           <div class="container">
             <div class="systray">
               <div class="text-center">
-                <%= link_to t(:privacy), [:privacy, :static] %> |
+                <% if Settings::Url.respond_to?(:external_privacy_url) -%>
+                  <%= link_to t(:privacy), Settings::Url.external_privacy_url, target: '_blank' %> |
+                <% else -%>
+                  <%= link_to t(:privacy), [:privacy, :static] %> |
+                <% end -%>
                 <%= link_to t(:imprint), [:imprint, :static] %> |
                 <%= link_to t(:usage), [:usage, :static] %>
               </div>
