--- a/app/views/requests/desktop/_campaign_form.html.erb
+++ b/app/views/requests/desktop/_campaign_form.html.erb
@@ -58,17 +58,6 @@
   <div class="row form-group">
     <%= label_tag :confirmation, t('.confirmation'), class: 'col-md-12 control-label' %>
   </div>
-  <div class="row form-group">
-    <div class="col-md-12">
-      <%= t('.confirmation_text_privacy_html') %>
-    </div>
-    <div class="col-md-12 div-margin-top">
-      <%= t('.confirmation_text_html') %>
-    </div>
-    <div class="col-md-12 div-margin-top">
-      <em class="text-danger"><%= t('.confirmation_text_warning_html') %></em>
-    </div>
-  </div>
   <% if display?(:email) -%>
     <div class="row form-group">
       <div class="col-md-12">
@@ -78,7 +67,21 @@
   <% end -%>
   <% if display?(:privacy_policy) -%>
     <%= render partial: 'privacy_policy_form', locals: { form: f } %>
+  <% else -%>
+    <div class="row form-group">
+      <div class="col-md-12">
+        <%= t('.confirmation_text_privacy_html') %>
+      </div>
+    </div>
   <% end -%>
+  <div class="row form-group">
+    <div class="col-md-12 div-margin-top">
+      <%= t('.confirmation_text_html') %>
+    </div>
+    <div class="col-md-12 div-margin-top">
+      <em class="text-danger"><%= t('.confirmation_text_warning_html') %></em>
+    </div>
+  </div>
   <div class="row form-group">
     <div class="btn-group btn-group-justified col-md-12" role="group">
       <%= link_to(t('buttons.back'), '#', remote: true,
