--- a/app/views/application/_privacy_policy_form.html.erb
+++ b/app/views/application/_privacy_policy_form.html.erb
@@ -1,15 +1,14 @@
 <div class="row form-group">
-  <div class="col-md-12">
-    <% if Settings::Url.respond_to?(:external_privacy_url) -%>
-      <%= link_to t(:privacy_policy), Settings::Url.external_privacy_url, target: '_blank' %>
-    <% else -%>
-      <%= link_to t(:privacy_policy), [:privacy, :static] %>
-    <% end -%>
-  </div>
-</div>
-<div class="row form-group">
-  <div class="col-md-12">
-    <%= form.check_box :privacy_policy_accepted, {}, true, nil  %>
-    <%= form.label :privacy_policy_accepted, class: 'control-label' %>
-  </div>
+  <%= form.label :privacy_policy_accepted, class: 'font-weight-normal' do %>
+    <div class="col-md-12">
+      <% url = Settings::Url.respond_to?(:external_privacy_url) ? Settings::Url.external_privacy_url : [:privacy, :static] -%>
+      <%= t :privacy_policy_html, url: url %>
+    </div>
+    <div class="col-md-12">
+      <strong>
+        <%= form.check_box :privacy_policy_accepted, {}, true, nil  %>
+        <%= form.object.class.human_attribute_name(:privacy_policy_accepted) %>
+      </strong>
+    </div>
+  <% end -%>
 </div>
