--- a/app/views/requests/mobile/_request_form.html.erb
+++ b/app/views/requests/mobile/_request_form.html.erb
@@ -63,19 +63,20 @@
               <%= f.email_field(:email, class: 'form-control', placeholder: t('placeholder.email')) %>
             </div>
           </div>
-          <div class="row form-group">
-            <div class="col-md-12"><%= t('requests.mobile.new.confirmation_text_privacy_html') %></div>
-          </div>
-          <div class="row form-group">
-            <div class="col-md-12"><%= t('requests.mobile.new.confirmation_text_html') %></div>
-          </div>
-          <div class="row form-group">
-            <div class="col-md-12"><em class="text-danger"><%= t('requests.mobile.new.confirmation_text_warning_html') %></em></div>
-          </div>
         <% end -%>
         <% if display?(:privacy_policy) -%>
           <%= render partial: 'privacy_policy_form', locals: { form: f } %>
+        <% else -%>
+          <div class="row form-group">
+            <div class="col-md-12"><%= t('requests.mobile.new.confirmation_text_privacy_html') %></div>
+          </div>
         <% end -%>
+        <div class="row form-group">
+          <div class="col-md-12"><%= t('requests.mobile.new.confirmation_text_html') %></div>
+        </div>
+        <div class="row form-group">
+          <div class="col-md-12"><em class="text-danger"><%= t('requests.mobile.new.confirmation_text_warning_html') %></em></div>
+        </div>
       </div>
       <div class="panel-footer">
         <div class="row">
