--- a/app/views/votes/desktop/_new.html.erb
+++ b/app/views/votes/desktop/_new.html.erb
@@ -18,19 +18,20 @@
         <%= f.email_field(:author, class: 'form-control', placeholder: t('placeholder.email')) %>
       </div>
     </div>
-    <div class="row form-group">
-      <div class="col-md-12">
-        <%= t('.hint.privacy_html') %>
-      </div>
-    </div>
-    <% if display?(:privacy_policy) -%>
-      <%= render partial: 'privacy_policy_form', locals: { form: f } %>
-    <% end -%>
     <% if display?(:status_updates_for_supporter) -%>
       <div class="row form-group">
         <div class="col-md-12">
           <%= f.check_box :status_updates_for_supporter, {}, true, nil %>
           <%= f.label :status_updates_for_supporter, class: 'control-label' %>
+        </div>
+      </div>
+    <% end -%>
+    <% if display?(:privacy_policy) -%>
+      <%= render partial: 'privacy_policy_form', locals: { form: f } %>
+    <% else -%>
+      <div class="row form-group">
+        <div class="col-md-12">
+          <%= t('.hint.privacy_html') %>
         </div>
       </div>
     <% end -%>
