--- a/app/views/votes/mobile/_new.html.erb
+++ b/app/views/votes/mobile/_new.html.erb
@@ -7,23 +7,9 @@
       <%= form_for([:request, @vote], remote: true) do |f| %>
         <%= hidden_field_tag :mobile, @mobile %>
         <div class="row form-group">
-          <span class="helper-block">
-            <%= t('.hint.text') %>
-            <em class="text-danger"><%= t('.hint.warning_html') %></em>
-            <%= t('.hint.privacy_html') %>
-          </span>
+          <div class="col-md-12"><%= t('.hint.text') %></div>
+          <div class="col-md-12"><em class="text-danger"><%= t('.hint.warning_html') %></em></div>
         </div>
-        <% if display?(:privacy_policy) -%>
-          <%= render partial: 'privacy_policy_form', locals: { form: f } %>
-        <% end -%>
-        <% if display?(:status_updates_for_supporter) -%>
-          <div class="row form-group">
-            <div class="col-md-12">
-              <%= f.check_box :status_updates_for_supporter, {}, true, nil %>
-              <%= f.label :status_updates_for_supporter, class: 'control-label' %>
-            </div>
-          </div>
-        <% end -%>
         <div class="row">
           <div class="col-md-8">
             <div class="form-group has-feedback has-clear">
@@ -34,19 +20,36 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 form-group">
-            <div class="btn-group btn-group-justified" role="group">
-              <div class="btn-group" role="group">
-                <%= f.submit(t('buttons.submit'), class: 'btn btn-default btn-primary') %>
-              </div>
-              <%= link_to(t('buttons.cancel'), [@request, id_list: @id_list, mobile: @mobile], remote: true, class: 'btn btn-default', role: :button) %>
-            </div>
-            <% @id_list.each do |idl| -%>
-              <%= f.hidden_field "id_list][", :value => idl, id: nil %>
-            <% end if @id_list -%>
-          </div>
         </div>
-      <% end %>
+        <% if display?(:status_updates_for_supporter) -%>
+          <div class="row form-group">
+            <div class="col-md-12">
+              <%= f.check_box :status_updates_for_supporter, {}, true, nil %>
+              <%= f.label :status_updates_for_supporter, class: 'control-label' %>
+            </div>
+          </div>
+        <% end -%>
+        <% if display?(:privacy_policy) -%>
+          <%= render partial: 'privacy_policy_form', locals: { form: f } %>
+        <% else -%>
+          <div class="row form-group">
+            <span class="helper-block">
+              <%= t('.hint.privacy_html') %>
+            </span>
+          </div>
+        <% end -%>
+        <div class="col-md-4 form-group">
+          <div class="btn-group btn-group-justified" role="group">
+            <div class="btn-group" role="group">
+              <%= f.submit(t('buttons.submit'), class: 'btn btn-default btn-primary') %>
+            </div>
+            <%= link_to(t('buttons.cancel'), [@request, id_list: @id_list, mobile: @mobile], remote: true, class: 'btn btn-default', role: :button) %>
+          </div>
+          <% @id_list.each do |idl| -%>
+            <%= f.hidden_field "id_list][", :value => idl, id: nil %>
+          <% end if @id_list -%>
+        </div>
+        <% end -%>
     </div>
   </div>
 </div>
