--- a/app/assets/javascripts/application.coffee.erb
+++ b/app/assets/javascripts/application.coffee.erb
@@ -163,15 +163,18 @@ $ ->
           url: $(@).data('url')
           data:
             position: coord
-          dataType: 'json').done (response) ->
-            if response.status == 200
-              KS.olMap.removeInteraction KS.newFeatureInteraction
-              KS.stopAnimationTimeout()
-              KS.layers.findById('new_feature').getSource().getFeatures()[0].set('animate', false)
-              $('#request_long').val(coord[0])
-              $('#request_lat').val(coord[1])
-            else
-              error.push response.error
+          dataType: 'json'
+        ).always (response) ->
+          if response.status == 200
+            KS.olMap.removeInteraction KS.newFeatureInteraction
+            KS.stopAnimationTimeout()
+            KS.layers.findById('new_feature').getSource().getFeatures()[0].set('animate', false)
+            $('#request_long').val(coord[0])
+            $('#request_lat').val(coord[1])
+          else if response.status == 303
+            location.href = response.getResponseHeader('X-Redirect-Url') + '/map?new_position='+coord
+          else
+            error.push response.error
       when 2
         unless $('.radio-type').is(':checked')
           error.push "<%= I18n.t('requests.desktop.new.error.required.type') %>"
